# forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EVALUATION.md  LICENSE  OPENCODE_ANALYSIS.md  OPENCODE_RUNTIME_PLAN.md  PROGRESS.md  README.md  README.zh.md  SECURITY.md  compaction.rs  constants.rs  error.rs  event.rs  executor.rs  loop.rs  mod.rs  node.rs  permission.rs  prune.rs  session.rs  state.rs  tool.rs  trace.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: README-legacy.md  api-compatibility-policy.md  deprecation-policy.md  forge-1.0-contracts-and-conformance.md  upgrading.md
examples/: core_workflow.rs  multi_agent_graph.rs  tool_context.rs
src/: lib.rs
src/langgraph/: branch.rs  channel.rs  compaction.rs  evaluator.rs  event.rs  graph.rs  loop.rs  tool.rs  trace.rs
src/runtime/: ablation.rs  branch.rs  cancel.rs  channel.rs  compaction.rs  component.rs  constants.rs  error.rs  evaluator.rs  event.rs  executor.rs  graph.rs  loop.rs  message.rs  metrics.rs  mod.rs  node.rs  output.rs  permission.rs  platform.rs  prune.rs  session.rs  session_state.rs  state.rs  tool.rs  trace.rs
tests/: README.md  contract_suite.rs  integration_suite.rs  unit_suite.rs
tests/contract/: mod.rs  serialization_contract.rs  tool_context_contract.rs
tests/fixtures/: mod.rs  workspace.rs
tests/golden/: checkpoint_record_v1.json  event_record_v1.json  session_snapshot_v1.json
tests/helpers/: events.rs  mod.rs
(+19 files in other folders)
