[package]
name = "forge"
version = "0.1.0"
edition = "2021"
license = "MIT"

description = "Forge: a Rust-first graph + runtime framework for agentic workflows"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
futures = "0.3"
